--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 html, body {
     background-color: #e0e0e0;
-    border: 0
+    bottom: 0;
+    right: 0; 
+    left: 0;
 }
 h1{
     font-family: 'Josefin Sans', sans-serif;
