changed service layout

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ h1{
 }
 
 p{
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.5em;
     text-align: center;
     justify-self: auto
