--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color: #e0e0e0;
+    background-color: #fbfbfb;
     margin: 0
 }
 h1{
@@ -16,7 +16,7 @@ h2{
 }
 h3{
     font-family: 'Poppins', sans-serif;
-    font-size: 1.5rem;
+    font-size: 2vw;
     text-align: center;
 }
 h4{
@@ -24,9 +24,31 @@ h4{
 }
 p{
     font-family: 'Poppins', sans-serif;
-    font-size: 1rem;
+    font-size: 24px;
     text-align: center;
     justify-self: auto
+}
+
+@media only screen and (max-width: 600px) {
+    p{
+        font-size: 1.25vh
+    }
+
+    h1{
+        font-size: 25px;
+    }
+}
+
+@media only screen and (min-width: 600px){
+    p{
+        font-size: 1.7vh
+    }
+}
+
+@media only screen and (min-width: 970px){
+    p{
+        font-size: 18px
+    }
 }
 
 .footer {
@@ -46,7 +68,7 @@ a:hover {
 }
 
 .serviceImage{
-    width: 70%;
-    margin-top: 30px;
-    padding-left: 40px
+    width: 100%;
+    height: auto;
+    padding-top: 15vh
 }
